# soundmint

./: .gitignore  Anchor.toml  nx.json  package-lock.json  package.json
programs/soundmint/: Cargo.toml
programs/soundmint/src/: constants.rs  error.rs  lib.rs
programs/soundmint/src/handlers/: admin.rs  artist.rs  collection.rs  initialize.rs  mod.rs  nft.rs  revenue.rs  royalty.rs  streaming.rs  treasury.rs
programs/soundmint/src/handlers/admin/: artist.rs  mod.rs  treasury.rs
programs/soundmint/src/state/: artist_profile.rs  master_nft.rs  mod.rs  revenue_tracker.rs  royalty_nft.rs  royalty_split.rs  treasury.rs
tests/: soundmint.ts
