[package]
name = "soundmint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soundmint"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]   


[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["metadata"] }
arrayref = "0.3.7"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }

# mpl-token-metadata = { version = "5.1.0", features = ["no-entrypoint"] } # explicit if direct CPI needed
mpl-token-metadata = "5.1.0"

# [dependencies]
# anchor-lang = { version = "0.31.0", features = ["init-if-needed"]}
# anchor-spl = { version = "0.31.0", features = ["metadata"] }
# # mpl-token-metadata = { version = "5.1.0", features = ["no-entrypoint"] }
# # mpl-token-metadata = "5.1.0"
# # mpl-token-metadata = { version = "1.15.0", features = ["no-entrypoint"] }
# mpl-token-metadata = { version = "5.1.0", features = ["no-entrypoint"] }
# solana-program = "1.18.8"

